--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body
 {
 	margin: 0;
 	padding: 0;
+	font-family: 'Rajdhani', sans-serif;
 }
 .all
 {
@@ -25,7 +26,7 @@ body
 }
 .menu
 {
-	z-index: 100;
+	z-index: 1000;
 	position: absolute;
 	height: 100%;
 	width: 100%;
@@ -39,7 +40,6 @@ span
 }
 .temp
 {
-	font-family: 'Rajdhani', sans-serif;
 	font-weight: lighter;
 	position: absolute;
 	top: 35%;
@@ -68,7 +68,7 @@ span
 	position: absolute;
 	top:85%;
 	left: 50%;
-	transform: translate(-50%,-50%);
+	transform: translate(-50%,-50%) scale(1.2);
 	cursor: pointer;
 }
 .cross
@@ -124,7 +124,7 @@ span
 }
 .a4
 {
-	background: url(notes.png);
+	background: url(music.png);
 	background-size: cover;
 }
 .a5
@@ -150,7 +150,6 @@ span
 .map
 {
 	left: -100%;
-	cursor: all-scroll;
 	position: absolute;
 	margin-top:50px;
 	margin-left:50px;
@@ -164,12 +163,13 @@ span
 }
 .calendar
 {
-	background-color: #222;
-	height: 430px;
-	width: 600px;
 	position: absolute;
-	top: 5%;
-	right:-100%;
+	margin-top:50px;
+	margin-left:50px;
+	height:400px;
+	width: 600px;
+	background-color: #222;
+	left:-100%;
 }
 .browser
 {
@@ -205,7 +205,7 @@ span
 	margin: 0;
 	background-size: cover;
 	transform: scale(0.5);
-	z-index: 1000;
+	z-index: 900;
 	cursor: pointer;
 }
 .c2
@@ -217,7 +217,7 @@ span
 	margin: 0;
 	background-size: cover;
 	transform: scale(0.8) translateX(30px);
-	z-index: 1000;
+	z-index: 900;
 	cursor: pointer;
 }
 .c3
@@ -229,7 +229,7 @@ span
 	margin: 0;
 	background-size: cover;
 	transform: scale(0.5);
-	z-index: 1000;
+	z-index: 900;
 	cursor: pointer;
 }
 .c4
@@ -243,7 +243,21 @@ span
 	margin: 0;
 	background-size: cover;
 	transform: scale(0.5);
-	z-index: 1000;
+	z-index: 900;
+	cursor: pointer;
+}
+.c5
+{
+	right: 0%;
+	position: absolute;
+	float: right;
+	height: 30px;
+	width: 30px;
+	background: url(cross2.png);
+	margin: 0;
+	background-size: cover;
+	transform: scale(0.7);
+	z-index: 900;
 	cursor: pointer;
 }
 
@@ -375,3 +389,130 @@ span
 	top: 4px;
 	box-shadow: 0px 0px #d3545d;
 }
+
+
+.main
+{
+	height: 300px;
+	width: 600px;
+	position: absolute;
+	display: grid;
+	grid-template-columns: 50% 50%;
+	overflow: hidden;
+	box-shadow: 0 3px 20px 1px #000;
+	left: -100%
+}
+.lines
+{
+	cursor: pointer;
+	position: absolute;
+	z-index: 20;
+	margin-top: 20px;
+	margin-left: 10px;
+}
+.line2
+{
+	position: absolute;
+	z-index: 20;
+	margin-top: 20px;
+	margin-left: 10px;
+}
+.cover
+{
+	transition:0.5s;
+	position: absolute;
+	height:100%;
+	width:100%;
+	z-index: 200;
+	background-color: #000000b0;
+	right: -100%;
+}
+.l
+{
+	height: 2px;
+	width: 25px;
+	background-color:black;
+	margin:5px;
+}
+#a
+{
+	margin-top: 70px;
+}
+.menu2
+{
+	transition: 0.5s;
+	height:100%;
+	width:25%;
+	background-color: white;
+	position: absolute;
+	left: -100%;
+	z-index: 300;
+}
+li
+{
+	transition: 0.3s;
+	padding: 5px;
+}
+li:hover
+{
+	cursor: pointer;
+	transform: scale(1.2);
+}
+.controls
+{
+	background-color:white;
+	display: inline-block;
+}
+.img
+{
+	background:url('1.jpg');
+	display: inline-block;
+	background-size: cover;
+}
+.name
+{
+	margin-top: 30px;
+}
+.buttons
+{
+	margin-top: 100px;
+	z-index: 250;
+}
+.back
+{
+	display: inline-block;
+	margin: 5px;
+	height: auto;
+	width: auto;
+	cursor: pointer;
+	z-index: 250;
+}
+.pause
+{
+	z-index: 250;
+	display: inline-block;
+	margin: 5px;
+	height: auto;
+	width: auto;
+	cursor: pointer;
+}
+.forward
+{
+	z-index: 250;
+	margin:5px;
+	display: inline-block;
+	height: auto;
+	width: auto;
+	cursor: pointer;
+}
+.cross3
+{
+	cursor: pointer;
+	position: absolute;
+	font-size: 35px;
+	z-index: 300;
+	margin-top: 20px;
+	margin-left: 10px;
+}
+
+
