--- a/style.css
+++ b/style.css
@@ -8,21 +8,49 @@ body
 {
 	position: absolute;
 	z-index: 50;
-	background: url(bg.png);
+	background: url(bg3.png);
 	background-size: cover;
 	height: 100vh;
 	width: 100vw;
 	filter: blur(0px);
 	overflow: hidden;
 }
+#date
+{
+	font-size: 35px;
+	position: absolute;
+	right: 3%;
+	top: 2%;
+	font-weight: bold;
+}
 .time
 {
-	font-family: 'Rajdhani', sans-serif;
+	margin-top: 50px;
+	height: 300px;
+	width: 150px;
 	position: absolute;
-	font-size: 12em;
-	color: #fff;
+	display: grid;
+	grid-template-columns: 50% 50%;
+	font-family: 'Montserrat', sans-serif;
 	left: 50%;
 	transform: translateX(-50%);
+	font-size: 10em;
+	color: #fff;
+	
+	
+}
+#hours
+{
+	color: #000;
+	justify-content: center;
+	margin: 0;
+	transform: translateX(-150px);
+}
+#mins
+{
+	margin: 0;
+	color: #32D1CB;
+	justify-content: center;
 }
 .menu
 {
@@ -33,32 +61,9 @@ body
 	left: -100%;
 	background-color: rgba(0, 0, 0, 0.62);
 }
-span
-{
-	font-family: sans-serif;
-	font-weight: lighter;
-}
-.temp
-{
-	font-weight: lighter;
-	position: absolute;
-	top: 35%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	font-size: 25px;
-	color: 
-}
-#date
-{
-	font-family: 'Rajdhani', sans-serif;
-	font-weight: lighter;
-	position: absolute;
-	top: 30%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	font-size: 35px;
-	color: #000;
-}
+
+
+
 .button
 {
 	height: 50px;
@@ -156,19 +161,13 @@ span
 	width: 600px;
 	background-color: #222;
 }
-.calendar iframe
-{
-	margin-top: 30px;
-}
+
 .calendar
 {
 	position: absolute;
-	margin-top:50px;
-	margin-left:50px;
-	height:400px;
-	width: 600px;
-	background-color: #222;
-	left:-100%;
+	height:100px;
+	width: 400px;
+	left: -100%;
 }
 .browser
 {
@@ -221,6 +220,7 @@ span
 }
 .c3
 {
+
 	float: right;
 	height: 30px;
 	width: 30px;
@@ -241,7 +241,7 @@ span
 	background: url(cross2.png);
 	margin: 0;
 	background-size: cover;
-	transform: scale(0.5);
+	transform: scale(0.8) translateY(50px);
 	z-index: 900;
 	cursor: pointer;
 }
@@ -513,5 +513,27 @@ li:hover
 	margin-top: 20px;
 	margin-left: 10px;
 }
+
+::selection {
+    background: transparent;
+}
+
+#example
+{
+	right: 10%;
+	position: absolute;
+	transform: scale(0.7);
+	font-size: 20px;
+	font-family: sans-serif;
+}
+
+
+
+
+
+
+
+
+
 
 
